# rng

./: CMakeLists.txt  README.md
my_project/: CMakeLists.txt
my_project/include/: my_header.hpp
my_project/src/: my_src.cpp
rng/: CMakeLists.txt
rng/include/: random_number.hpp
rng/src/: random_number.cpp
test/: CMakeLists.txt  my_test.cpp  rng_test.cpp
